--- a/stylesheets/frontPage.css
+++ b/stylesheets/frontPage.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -7,6 +9,7 @@
     display: flex;
 }
 .sidebar {
+    font-family: 'Dosis', sans-serif;
     position: absolute;
     background: linear-gradient(rgba(213, 218, 255, 0.98), rgb(114, 116, 247), rgba(127, 125, 255, 0.98));
     width:240px;
@@ -16,28 +19,41 @@
     z-index: 1;
     /* padding-top: 12px; */
 }
+
+.sidebar nav li{
+    list-style: none;
+    font-size: 30px;
+    padding: 33px 0px   ;
+}
+.sidebar nav li a{
+    text-decoration: none;
+    color: black;
+}
+.btn{
+    width: 8rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.1rem;
+    padding: 1rem 2rem;
+    border-radius: 0.8rem;
+    border: 3px ridge black;
+    box-shadow: 2px 2px black;
+    cursor: pointer;
+    background-image: linear-gradient(rgb(210, 245, 255), rgb(203, 244, 254), rgb(155, 240, 255));
+}
+.btn:hover{
+    transform: scale(1.04);
+    background-image: linear-gradient(rgb(201, 252, 255), rgb(113, 255, 255), rgb(110, 243, 255));
+}
+.btn:active{
+    transform: translateY(3px);
+}
+
 .sidebarGo{
     transform: translateX(-280px);
     position: absolute;
 }
-
-.sidebar nav {
-    padding-top: 15px;
-    display: flex;
-    justify-content: center;
-}
-
-.sidebar nav li {
-    list-style: none;
-    font-size: 1.7rem;
-    padding: 29px 0px 10px 0px;
-}
-
-.sidebar nav li a{
-    width: 6.8rem;
-}
-
-
 .hamburger{
     position: absolute;
     top: 12px;
@@ -51,6 +67,12 @@
 .cross{
     cursor: pointer;
     margin-left: 190px;
+}
+.sidebar nav {
+    padding: 45px;
+    padding-top: 60px;
+    display: flex;
+    justify-content: center;
 }
 
 .main{
@@ -173,23 +195,3 @@ a{
     color: black;
 }
 
-.btn{
-    width: 8rem;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    font-size: 1.1rem;
-    padding: 1rem 2rem;
-    border-radius: 0.8rem;
-    border: 3px ridge black;
-    box-shadow: 2px 2px black;
-    cursor: pointer;
-    background-image: linear-gradient(rgb(210, 245, 255), rgb(203, 244, 254), rgb(155, 240, 255));
-}
-.btn:hover{
-    transform: scale(1.04);
-    background-image: linear-gradient(rgb(201, 252, 255), rgb(113, 255, 255), rgb(110, 243, 255));
-}
-.btn:active{
-    transform: translateY(3px);
-}
