--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -39,6 +39,7 @@
     top: 10px;
     left: 10px;
     border: 0.4rem solid black;
+    border-radius: 17px;
 }
 .logo img{
     margin: 4px;
@@ -55,6 +56,7 @@
     width: 60vw;
     box-shadow: -2px 2px 10px rgb(31, 30, 30), 9px 0px 10px rgb(93, 92, 92);
     background: linear-gradient(90deg, rgb(253, 144, 144), rgb(255, 127, 146), rgb(175, 110, 255));
+    border-radius: 70px;
 }
 .login_container{
     display: flex;
@@ -63,6 +65,9 @@
     background-color: rgb(52, 44, 44);
     height: 65vh;
     width: 30vw;
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+    opacity: 75%;
 }
 .login_container h1{
     color: white;
