--- a/stylesheets/totalSubmissions.css
+++ b/stylesheets/totalSubmissions.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -21,37 +23,6 @@
         width: 100%;
         height: 100%;
 }
-.sidebar {
-    position: absolute;
-    background: linear-gradient(rgba(213, 218, 255, 0.98), rgb(114, 116, 247), rgba(127, 125, 255, 0.98));
-    width:240px;
-    height: 100vh;
-    box-shadow: 2px 2px 20px black;
-    transition: all 0.2s ease;
-    z-index: 1;
-    /* padding-top: 12px; */
-}
-.sidebarGo{
-    transform: translateX(-280px);
-    position: absolute;
-}
-
-.sidebar nav {
-    padding-top: 15px;
-    display: flex;
-    justify-content: center;
-}
-
-.sidebar nav li {
-    list-style: none;
-    font-size: 1.7rem;
-    padding: 29px 0px 10px 0px;
-}
-
-.sidebar nav li a{
-    width: 6.8rem;
-}
-
 
 .hamburger{
     position: absolute;
@@ -75,7 +46,27 @@ a{
     margin-left: 230px;
     margin-top: 70px;
 }
+.sidebar {
+    font-family: 'Dosis', sans-serif;
+    position: absolute;
+    background: linear-gradient(rgba(213, 218, 255, 0.98), rgb(114, 116, 247), rgba(127, 125, 255, 0.98));
+    width:240px;
+    height: 100vh;
+    box-shadow: 2px 2px 20px black;
+    transition: all 0.2s ease;
+    z-index: 1;
+    /* padding-top: 12px; */
+}
 
+.sidebar nav li{
+    list-style: none;
+    font-size: 30px;
+    padding: 33px 0px   ;
+}
+.sidebar nav li a{
+    text-decoration: none;
+    color: black;
+}
 .btn{
     width: 8rem;
     display: flex;
@@ -95,4 +86,29 @@ a{
 }
 .btn:active{
     transform: translateY(3px);
+}
+
+.sidebarGo{
+    transform: translateX(-280px);
+    position: absolute;
+}
+.hamburger{
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    z-index: 1;
+}
+.ham{
+    cursor: pointer;
+    margin-left: 0.5rem;
+}
+.cross{
+    cursor: pointer;
+    margin-left: 190px;
+}
+.sidebar nav {
+    padding: 45px;
+    padding-top: 60px;
+    display: flex;
+    justify-content: center;
 }
