--- a/stylesheets/frontPage.css
+++ b/stylesheets/frontPage.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Ubuntu&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -34,7 +32,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     padding: 1rem 2rem;
     border-radius: 0.8rem;
     border: 3px ridge black;
@@ -157,26 +155,21 @@
 .profile:hover img{
     transform: scale(1.04);
 }
-#codechef_profile{
-    left: 23vw;
+#spoj_profile{
+    left: -12vw;
 }
 #codeforces_profile{
-    left: 9vw;
+    left: 22vw;
 }
-#hackerrank_profile{
-    left: -20vw;
-}
-#hackerrank_profile img{
-    height: 28vh;
-    width: 14vw;
+#atcoder_profile{
+    left: -30vw;
 }
 #leetcode_profile{
-    left: -33vw;
+    left: 5vw;
 }
 .circle{
     height: 20vh;
     width: 10vw;
-    /* border: 2px solid blue; */
     border-radius: 50%;
     position: absolute;
     top: 80px;
