--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -4,23 +4,25 @@
     font-family: 'Ubuntu', sans-serif;
 }
 .light_text{
-    color: rgb(171, 171, 171);
+    color: rgb(219, 219, 219);
 }
 .underline{
     text-decoration: underline;
 }
 .btn{
     width: 9rem;
-    background-color: rgb(52, 44, 44);
+    background-color: rgb(29, 25, 25);
     color: white;
     font-size: 1rem;
     border: 2px solid rgb(8, 215, 8);
     border-radius: 10px;
     padding: 0.8rem;
     cursor: pointer;
+    margin-top: 20px;
 }
 .btn:hover{
-    background-color: rgb(42, 35, 35);
+    border: 2px solid rgb(0, 255, 0);
+    background-color: rgb(50, 41, 41);
     transform: scale(1.05);
 }
 .main{
@@ -39,11 +41,10 @@
     top: 10px;
     left: 10px;
     border: 0.4rem solid black;
-    border-radius: 17px;
+    border-radius: 5px;
 }
 .logo img{
     margin: 4px;
-    /* border: 3px solid rgba(18, 17, 17, 0.627); */
     box-shadow: 2px 2px 2px black,
                 -2px -2px 2px black;
     width: 3vw;
@@ -62,7 +63,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(52, 44, 44);
+    background-color: rgb(15, 15, 15);
     height: 65vh;
     width: 30vw;
     border-top-right-radius: 50px;
@@ -85,7 +86,7 @@
     border: 2px solid rgb(49, 49, 255);
     border-radius: 30px;
     color: white;
-    background-color: rgb(52, 44, 44);
+    background-color: rgb(31, 27, 27);
 }
 .login_container input:hover{
     transform: scale(1.03);
